2022-12-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Trivially refactor.  Rename class `constant_int_reg` to
	`readonly_register`.  Say "readonly" instead of "const" to
	try to avoid confusion with C++ constness.  Drop "int" because
	integer-valued registers are the norm, not the exception.

	* src/roff/troff/column.cpp (init_column_requests):
	* src/roff/troff/div.cpp (init_div_requests):
	* src/roff/troff/input.cpp (top level, init_input_requests):
	* src/roff/troff/node.cpp (init_node_requests):
	* src/roff/troff/reg.h: Do it.

2022-12-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Trivially refactor.  Rename class `constant_reg` to
	`readonly_text_register`.  Say "readonly" instead of "const" to
	try to avoid confusion with C++ constness.  Say "text" because
	this class is _mostly_ used for interpolation of string-valued
	registers like the version registers `.x`, `.y` and `.Y`.
	Nevertheless there are some abuses (apparently because the
	constructors for register classes don't accept integer
	parameters for initialization--why?).

	* src/roff/troff/input.cpp (top level)
	(readonly_text_register::readonly_text_register)
	(readonly_text_register::get_string)
	(main, init_registers, init_requests): Do it.

2022-12-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Trivially refactor.  Rename `number_reg_dictionary` to
	`register_dictionary`.  It's shorter _and_ non-abbreviated _and_
	matches our documentation.

	* src/roff/troff/column.cpp (init_column_requests):
	* src/roff/troff/div.cpp (page_number, init_div_requests):
	* src/roff/troff/env.cpp (print_env, init_env_requests)
	(init_hyphen_requests):
	* src/roff/troff/input.cpp (length_request)
	(interpolate_number_format, do_register, do_if_request, main)
	(init_registers, init_input_requests):
	* src/roff/troff/node.cpp (get_register, init_node_requests):
	* src/roff/troff/reg.cpp (top level, define_number_reg)